--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
