--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.54.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.5.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
