--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
+    "remove-accents": "^0.5.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
