--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +30,7 @@
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
