--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "remove-accents": "^0.5.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
   "scripts": {
